# FluxTensors

./: .gitignore  CMakeLists.txt  README.md  setup.py
include/: linear_layer.h  relu.h
src/: activations.cu  linear_layer.cu  relu.cu
tests/: test_linear.py
